# libmali

./: grabber.sh  link.sh  meson.build  meson_options.txt  normalize.sh  parse_name.sh
